ded